Create branch for subsection "Derive Classes" in Assignment_1.tex

--- a/docs/Assignments/Assignment_1/Assignment_1.tex
+++ b/docs/Assignments/Assignment_1/Assignment_1.tex
@@ -14,8 +14,15 @@
 
 \subsection{Derive Classes}
 
-The following list of classes can be derived from the requirements document\footnote{https://github.com/mkhattat/bitcode-SEM/blob/master/docs/requirements.pdf}.
+The following list of candidate classes can be derived from the requirements document\footnote{https://github.com/mkhattat/bitcode-SEM/blob/master/docs/requirements.pdf} by looking for noun phrases in this document. We refined this list by sorting them and by defining the type of phrase.
 
+\begin{center}
+    \begin{tabular}{ | l | l | l |}
+    \hline
+    Noun Phrase & Group & Type \\ \hline
+    
+    \end{tabular}
+\end{center}
 
 \subsection{Main Classes}
 text
