--- a/docs/Assignments/Assignment_1/Assignment_1.tex
+++ b/docs/Assignments/Assignment_1/Assignment_1.tex
@@ -100,10 +100,27 @@ In table \ref{table:ListDerivedNouns} a list of noun phrases is presented that w
 
 
 \subsection{Main Classes}
-tbd
+Our ‘main’ classes consist of the necessary objects to the core function of the game:
+Items, Board, backgorundTileCatalog and the MainScreen. These are the followings:
+
+\paragraph{ItemFactory} his class is responsible for creating random Item classes. This is important mainly because when the items are moved on the board, another random Item should be replaced on the board. These are basically all the pictures we used in for the game, whose point is to make sure 3 or more are set vertically or horizontally and the game has makes sure that after each move there are not any items that can be set in a group of 3 or more.
+
+\paragraph{Board} This class contains everything necessary for the board in our game, it mainly interact with the class Items,  we make sure here that every time a move is made, the items next to each other are not of the same object. If so automatically remove any items (3 or more) next to each other. This class is also responsible for other important tasks namely, creating a random board, replacing and removing items on the board data structure and also finding the similar items on the board.
+
+
+\paragraph{backgroundTileCatolog} This class contains of an arraylist which holds the position for each tile. We can add a new background tile or remove an existing one, we can count the number of tiles we have added to the arraylist, or check to see if at some given position a background tile already exist or not.( This class works heavily with the Board class, making sure there is always a tile so there won’t be any empty place in our board.)
+
+
+\paragraph{MainScreen} The MainScreen interacts with all of the other main classes, since it’s responsible for displaying everything and it needs information such as Item, Size of the board, and Tiles to know where everything is and make sure if 3 or more items of the same shape are next to each other automatically remove, also makes sure that the board data structure is in sync with what on the screen is.
+
+
+
+\paragraph{MouseEventHandler}  It has one important responsibility and that is capturing the input namely, mouse movements. This class works with animation class and makes sure that moving items on the screen is possible.
 
 \subsection{Reflect on main class decisions}
-tbd
+We consider the other classes as less important since they’re not required for the main function of the game; ScoreCounter makes the game more intersecting (if you reach a certain score you can  update or upgrade to be able to remove more tiles at the same time), but even without the ScoreCounter you should be able to play the game without any problems.
+While these functions could likely be handled by the MainScreen class, making them into different classes allows the MainScreen class to be more focused solely on handling rendering tasks, prevents it from becoming bloated, and allows for easier expansion of the functions of ScoreCounting and other functions.
+
 
 \subsection{The Class diagram}
 tbd
@@ -134,58 +151,10 @@ tbd
 tbd
 
 \subsection{Composition and Aggregation}
-\begin{figure}[H]
-\includegraphics[scale=0.95]{Images/BackgroundTileCatalog.jpg}
-An instance of BackgroundTileCatalog contains a reference to the BackgroundTiles class but they are independent and they have their own lifetime, So BackgroundTileCatalog aggregates BackgroundTiles.
-\end{figure}
-
-\begin{figure}[H]
-\includegraphics[scale=1]{Images/MainScreen.jpg} 
-An instance of MainScreen class has a strong relation, or in other words owns, the JPanel, JLabel, GridBagConstrains classes. There is no reason for these classes to exist without MainScreen class. So it's composition.
-\end{figure}
-
-\begin{figure}[H]
-\includegraphics[scale=0.95]{Images/RTLDragAnimation.jpg} 
-An instance of RTLDragAnimation class has a relationship with MainScreen and it's aggregation because MainScreen can exist without RTLDragAnimation but at the same time this class owns a Point which cannot exist without RTLDragAnimation, so it's composition.
-\end{figure}
-
-\begin{figure}[H]
-\includegraphics[scale=0.95]{Images/TTBDragAnimation.jpg} 
-An instance of TTBDragAnimation class has a relationship with MainScreen and it's aggregation because MainScreen can exist without TTBDragAnimation but at the same time this class owns a Point which cannot exist without TTBDragAnimation, so it's composition.
-\end{figure}
-
-\begin{figure}[H]
-\includegraphics[scale=0.95]{Images/JPanelTile.jpg} 
-An instance of JPanelTile class has a relationship with JLabel and Point. It's aggregation because these two classes can exist without JPanelTile.
-\end{figure}
-
-\begin{figure}[H]
-\includegraphics[scale=0.95]{Images/Launcher.jpg} 
-A Launcher class owns a MainScreen class because if the Launcher class is killed the MainScreen class will also be killed, so a composition.
-\end{figure}
-
-\begin{figure}[H]
-\includegraphics[scale=0.97]{Images/MouseEventHandler.jpg} 
-MouseEventHandler aggregates MainScreen and Animation classes. It has a relation with these two classes but they are independent of each other, or in other words an aggregation. But it has a stronger relation with MouseAction, means when MouseEventHandler goes out of scope, then MouseAction also goes out of scope, so in this case a composition.
-\end{figure}
-
-\begin{figure}[H]
-\includegraphics[scale=0.95]{Images/StartupScreen.jpg} 
-StartupScreen class owns some classes namely: JFrame, JLabel, JPanel and GridBagConstraints. These classes are dependent on the StartupScreen, means if it dies these classes will also die. So it is a composition.
-\end{figure}
-
-\begin{figure}[H]
-\includegraphics[scale=0.95]{Images/Board.jpg} 
-Board class owns an Item class. This is a composition.
-\end{figure}
-
-\begin{figure}[H]
-\includegraphics[scale=0.95]{Images/Game.jpg} 
-Game class owns a Board class. This is a composition.
-\end{figure}
+tbd
 
 \subsection{Parametrized Classes}
-We didn't create any parametrized class in our source code but we use some parametrized classes from standard java library namely ArrayList and LinkedList. Java is a typed language and the concept of parametrized classes is mainly useful for working with collections. Parametrized classes allow us to derive the type of a class. We write the body of a parametrized class, we may invoke some operation on the parameter. Later when the class is bounded with a parameter the compiler tries to ensure this parameter supports operations required by the template.
+tbd
 
 \subsection{Hierarchy Class Diagrams}
 \begin{figure}[H]
@@ -229,6 +198,18 @@ Items are produced by an item factory, which can create each of the seven types 
 Each item implements the item interface, as a result the board can contain every type of item and request its sprite.
 A similar functionality could be implemented using an item class with an id attribute, however such an implementation would make further expanding each item individually much more complicated and inconvenient.
 
+\newpage
+\section{Traceability}
+
+\subsection{Traceability Strategy}
+We have chosen to use a combination of knowledge based and structural based traceability links. We want to use structural based traceability links as much as possible because we think that the code should speak for itself. This means that the links between components in the code should be clear and well defined, also the naming of the artefacts should be consistent. We also think that we also need knowledge based link that are less obvious and need human interaction to surface.
+
+\paragraph{Our Strategy} test
 
 \end{document}
+
+
+
+
+
 
