Added descriptions of the animations hierarchy and the classes and interfaces inherited from external libraries.

--- a/docs/Assignments/Assignment_1/Assignment_1.tex
+++ b/docs/Assignments/Assignment_1/Assignment_1.tex
@@ -108,6 +108,10 @@ A similar functionality could be implemented using an item class with an id attr
 \end{class}
 \end{tikzpicture}
 
+This hierarchy generalizes the behavior of animations, making it easier to work with different animations.
+
+Furthermore, the MouseEventHandler class implements the MouseListener and MouseMotionListener interfaces from the java.awt.event library so it can handle mouse events.
+The MainScreen class and the JPanelTile class extend the JLayeredPane class and the JPane class, respectively; Both of these superclasses are from the javax.swing library and are used to create a UI.
 
 
 \end{document}
